Add : added report page
