# FeedbacksManagementApi/Controllers/SpecialtiesController.cs
@@ -1,0 +1,38 @@
+﻿using Domain.Entities;
+using Domain.Interfaces;
+using FeedbacksManagementApi.Repository;
+using Infrastructure.Exceptions;
+using Microsoft.AspNetCore.Http;
+using Microsoft.AspNetCore.Mvc;
+
+namespace FeedbacksManagementApi.Controllers
+{
+    [Route("api/[controller]/[action]")]
+    [ApiController]
+    public class SpecialtiesController : ControllerBase
+    {
+        private readonly ISpecialtyRepository specialtyRepository;
+
+        public SpecialtiesController(ISpecialtyRepository specialtyRepository)
+        {
+            this.specialtyRepository = specialtyRepository;
+        }
+
+        [HttpGet]
+        public ActionResult<IEnumerable<Specialty>> GetSpecialties()
+        {
+            try
+            {
+                return Ok(specialtyRepository.GetSpecialties());
+            }
+            catch (AppException ax)
+            {
+                return BadRequest(ax.Message);
+            }
+            catch (Exception)
+            {
+                return BadRequest("خطا در دریافت لیست تخصص ها");
+            }
+        }
+    }
+}
